tabpy-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tabpy-deployment
  labels:
    app: tabpy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tabpy
  template:
    metadata:
      labels:
        app: tabpy
    spec:
      containers:
      - name: tabpy
        image: tfoldi/k8s-tabpy:stable
        ports:
        - containerPort: 9004
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
          privileged: false
