tabpy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tabpy
  labels:
    app: tabpy
spec:
  type: LoadBalancer
  ports:
  - port: 9004
    protocol: HTTP
  selector:
    app: tabpy
